# dynamic-graph-fed-rl-lab

./: .dockerignore  .editorconfig  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  ARCHITECTURE.md  AUTONOMOUS_RESEARCH_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_DOCUMENTATION.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_REPORT.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  ENTERPRISE_SAAS_README.md  GENERATION5_BREAKTHROUGH_COMPLETION_REPORT.md  GENERATION6_TRANSCENDENT_COMPLETION_REPORT.md  GENERATION8_TRANSCENDENT_META_INTELLIGENCE_FINAL_REPORT.md  GENERATION_4_COMPLETION_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_VALIDATION.md  PROJECT_CHARTER.md  QUANTUM_COMPUTING_INTEGRATION.md  README.md  RESEARCH_CONTRIBUTIONS_SUMMARY.md  ROBUSTNESS_TESTING_SUMMARY.md  SECURITY.md  autonomous_sdlc_demo.py  autonomous_sdlc_results.json  (+50 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
.terragon/: autonomous_executor.py  config.yaml  demo_discovery.py  requirements.txt  value-metrics.json  value_discovery.py
benchmarks/: __init__.py  datasets.py
deployment/: ARCHITECTURE_PRODUCTION.md  DEPLOYMENT_GUIDE.md  Dockerfile  OPERATIONS_RUNBOOK.md  docker-compose.prod.yml  kubernetes-manifest.yml  production.env  start-production.sh
deployment/monitoring/: consciousness-dashboard.json  consciousness_rules.yml  logging.json  prometheus.yml
deployment/production/: docker-compose.yml
deployment/staging/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  ROADMAP.md  index.md
docs/adr/: 001-federated-architecture-choice.md  template.md
docs/deployment/: README.md
docs/guides/: getting-started.md
docs/monitoring/: README.md
docs/testing/: README.md
docs/workflows/: README.md  ci-template.yml  docs-template.yml  release-template.yml  security-template.yml
examples/: autonomous_generation1_demo.py  autonomous_research_demo.py  comprehensive_autonomous_demo.py  generation2_robust_demo.py  generation2_robust_security_demo.py  generation3_quantum_scaling_demo.py  generation3_scaling_demo.py  generation4_demo.py  generation5_breakthrough_demo.py  generation6_transcendent_demo.py  generation6_transcendent_standalone.py  generation7_universal_consciousness_demo.py  generation7_universal_optimizer_demo.py  generation8_transcendent_meta_intelligence_demo.py  generation_4_ai_optimizer_demo.py  global_deployment_demo.py  quantum_hardware_demo.py  quantum_planner_basic.py  quantum_planner_minimal.py  quantum_planner_robust.py  quantum_planner_scalable.py  quantum_planner_standalone.py  quantum_task_planner_demo.py  research_validation_demo.py  robust_federated_demo.py  scalable_quantum_demo.py  simple_autonomous_demo.py  simple_federated_demo.py  simple_generation2_demo.py  simple_mock_demo.py  simple_traffic_demo.py  train_traffic_federated.py
infrastructure/kubernetes/: deployment.yaml  namespace.yaml
infrastructure/terraform/: main.tf  variables.tf
metrics_data/: metrics_20250814_235055.json  metrics_20250814_235057.json  metrics_20250814_235059.json  metrics_20250814_235101.json  metrics_20250814_235103.json  metrics_20250814_235105.json  metrics_20250814_235107.json  metrics_20250814_235109.json  metrics_20250814_235111.json  metrics_20250814_235113.json  metrics_20250814_235115.json  metrics_20250814_235117.json  metrics_20250814_235119.json  metrics_20250814_235121.json  metrics_20250814_235123.json  metrics_20250814_235125.json  metrics_20250814_235127.json  metrics_20250814_235129.json  metrics_20250814_235131.json  metrics_20250814_235133.json  metrics_20250814_235135.json  metrics_20250814_235137.json  metrics_20250814_235139.json  metrics_20250814_235141.json  metrics_20250814_235143.json  metrics_20250814_235145.json  metrics_20250814_235147.json  metrics_20250814_235149.json  metrics_20250814_235151.json  metrics_20250814_235153.json  metrics_20250814_235155.json  metrics_20250814_235157.json  metrics_20250814_235159.json  metrics_20250814_235201.json  metrics_20250814_235203.json  metrics_20250814_235205.json  metrics_20250814_235207.json  metrics_20250814_235209.json  metrics_20250814_235211.json  metrics_20250814_235213.json  (+20 more)
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
papers/: adversarial_robustness_dynamic_graphs.md  communication_efficient_temporal_compression.md  quantum_coherence_federated_learning.md
results/: robust_demo_results.json  scalable_quantum_results.json
scripts/: autonomous_mock_deps.py  autonomous_test_runner.py  build.sh  complete_mock.py  deploy_production.sh  deploy_quantum_planner.py  mock_jax.py  run_benchmarks.py  setup.py  validate_code.py
security/configs/: bandit.yml  safety-policy.json
security/policies/: security-policy.md
src/dynamic_graph_fed_rl/: __init__.py  cli.py
src/security/: security.conf
tests/: __init__.py  autonomous_comprehensive_test_suite.py  conftest.py  enhanced_coverage_test_suite.py  test_comprehensive_validation.py  test_quality_gates.py
tests/benchmarks/: test_performance_benchmarks.py
tests/consciousness/: test_universal_quantum_consciousness.py
tests/e2e/: test_complete_pipeline.py
tests/fixtures/: __init__.py  graph_fixtures.py
tests/integration/: test_federated_training.py
tests/load/: locustfile.py
tests/performance/: conftest.py  test_training_performance.py
tests/quantum_hardware/: __init__.py  test_benchmarking.py  test_quantum_backends.py  test_quantum_federated_learning.py
tests/quantum_planner/: __init__.py  test_ai_optimizer.py  test_core.py  test_exceptions.py  test_executor.py  test_monitoring.py  test_optimizer.py  test_performance.py  test_scaling.py  test_scheduler.py  test_security.py  test_validation.py
tests/unit/: test_basic.py  test_package_imports.py
(+134 files in other folders)
